파이썬을 이용한 통계분석 chapter 4 정리_출처 추가

--- a/statistical-analysis-using-python/presentation/4장_표본분포에_대한_이해.ipynb
+++ b/statistical-analysis-using-python/presentation/4장_표본분포에_대한_이해.ipynb
@@ -382,12 +382,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "source": [
+    "## 출처\n",
+    "- 이미지 출처\n",
+    "\n",
+    "    - [모수와 통계량](https://m.blog.naver.com/mit_or_kr/222381130551)\n",
+    "    - [모집단의 분포와 표본평균의 분포](https://angeloyeo.github.io/2021/01/05/confidence_interval.html)\n",
+    "    - [중심극한정리](https://drhongdatanote.tistory.com/57)\n",
+    "    - [카이제곱 분포](https://angeloyeo.github.io/2021/12/13/chi_square.html)\n"
+   ]
   }
  ],
  "metadata": {
