파이썬을 이용한 통계분석 chapter 4 Quiz-작업중

--- a/statistical-analysis-using-python/presentation/4장_표본분포에_대한_이해.ipynb
+++ b/statistical-analysis-using-python/presentation/4장_표본분포에_대한_이해.ipynb
@@ -117,9 +117,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\overline{X} = \\frac{x_1, \\dots, x_n}{n}$$ \n",
+    "$$\\overline{X} = \\frac{X_1 + \\dots + X_n}{n}$$ \n",
     "$$E(\\overline{X}) = \\mu$$\n",
     "$$Var(\\overline{X}) = \\sigma_{\\overline{X}}{^2} = \\frac{\\sigma^2}{n}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `큰 수의 법칙 (LLN, Law of Large Numbers)`\n",
+    "- **표본의 크기 $n$이 증가함에 따라 표본 평균 $\\overline{X}_n$이 모평균 $\\mu$에 수렴하는 현상**\n",
+    "\n",
+    "- 따라서, 취합하는 표본의 수가 많을 수록, 통계적 정확도는 올라가게 된다\n",
+    "\n",
+    "- 큰 수의 강법칙 / 큰 수의 약법칙으로 나뉘어진다\n",
+    "\n",
+    "    - 요약하자면, **시행 횟수가 늘어날 수록 실제 측정한 확률 (통계적 활률)이 수학적으로 예측된 확률 (수학적 확률)에 수렴할 확률이 1에 가까워 진다**\n",
+    "\n",
+    "    - <u>수학적 확률과 통계적 확률을 이어주는 중요한 법칙으로, 귀납논등에 논리적 타당성을 제공한다</u>\n",
+    "\n",
+    "        - 즉, 통계학이랑 확률론을 기반으로 전개되는 학문이라는 뜻\n",
+    "\n",
+    "- 출처\n",
+    "    - [생각과 고민 - 큰 수의 법칙](https://gguguk.github.io/posts/LLN/)\n",
+    "    - [나무위키 - 큰 수의 법칙](https://namu.wiki/w/%ED%81%B0%20%EC%88%98%EC%9D%98%20%EB%B2%95%EC%B9%99)"
    ]
   },
   {
@@ -144,7 +166,9 @@
     "    \n",
     "    - **모집단이 어떤 분포를 따르는지 모르더라도, <u>표본 평균 $\\overline{X}$에 대한 분포가 정규분포를 따른다는 근거</u>**\n",
     "\n",
-    "- sample size ($n>=30$) : 통계학자들이 경험적으로 설정한 숫자일 뿐, 중심극한정리를 적용할 때 절대적인 기준은 아니다\n",
+    "- sample size ($n>=30$) \n",
+    "    - `표본의 크기가 클 수록 (한 번 뽑을 때 많이 뽑을 수록), 표본평균의 분포가 정규분포에 더 가깝게 수렴한다`\n",
+    "    - 통계학자들이 경험적으로 설정한 숫자일 뿐, 중심극한정리를 적용할 때 절대적인 기준은 아니다\n",
     "\n",
     "- [중심극한정리 성립 시뮬레이션 웹사이트](https://onlinestatbook.com/stat_sim/sampling_dist/index.html)"
    ]
@@ -158,6 +182,30 @@
     "<p align=\"center\">\n",
     "  <img src=\"https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2Fy9s8w%2FbtqysNUSVom%2F5KQ0lhT5NHkU6OTveGKkU1%2Fimg.png\">\n",
     "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 중심극한정리와 큰 수의 법칙의 공통점과 차이점\n",
+    "- 큰 수의 법칙 : 표본집단의 크기가 커질수록, 표본 평균이 모평균 (이론값)에 가까워 진다\n",
+    "\n",
+    "- 중심극한정리 : 무작위로 추출된 표본의 크기가 커질수록, 표본 평균의 분포는 모집단의 분포 모양과 관계 없이 정규분포에 가까워 진다\n",
+    "<br><br>\n",
+    "\n",
+    "- 공통점 : 두 가지 모두 표본 평균 $\\overline{X}$에 대해 설명한다\n",
+    "\n",
+    "- 차이점\n",
+    "    - 큰 수의 법칙 : **표본 평균 $\\overline{X}$이 $n \\rightarrow \\infty$에 따라 모평균 $\\mu$에 확률 수렴한다**\n",
+    "\n",
+    "        - 그러나 <u>표본 평균 $\\overline{X}$이 따르는 분포에 대해서는 설명하지 않는다</u>\n",
+    "        \n",
+    "    - 중심극한정리 : **표본 평균 $\\overline{X}$이 $n \\rightarrow \\infty$에 따라 정규분포로 분포 수렴한다**\n",
+    "<br><br>\n",
+    "- 출처\n",
+    "    - [생각과 고민 - 큰 수의 법칙](https://gguguk.github.io/posts/LLN/)\n",
+    "    - [나무위키 - 큰 수의 법칙](https://namu.wiki/w/%ED%81%B0%20%EC%88%98%EC%9D%98%20%EB%B2%95%EC%B9%99)\n"
    ]
   },
   {
@@ -217,6 +265,15 @@
     "$$ x^2 = \\sum_{i=1}^n(\\frac{X_i - \\mu}{\\sigma})^2 $$\n",
     "\n",
     "&emsp;&emsp;&emsp;를 얻으면 $x^2$는 자유도 $n$인 카이제곱분포를 따른다"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 양의 정수 $k$에 대해 $k$개의 독립적이고 표준정규분포를 따르는 확률변수 $X_1, \\dots, X_k$를 정의하면 자유도 $k$의 카이제곱분포는 확률변수 $Q$의 분포이다\n",
+    "\n",
+    "$$ Q = \\sum_{i=1}^kX_i^2 $$"
    ]
   },
   {
@@ -384,13 +441,21 @@
    "metadata": {},
    "source": [
     "## 출처\n",
-    "- 이미지 출처\n",
+    "- 이론 및 이미지\n",
     "\n",
     "    - [모수와 통계량](https://m.blog.naver.com/mit_or_kr/222381130551)\n",
     "    - [모집단의 분포와 표본평균의 분포](https://angeloyeo.github.io/2021/01/05/confidence_interval.html)\n",
+    "    - [큰 수의 법칙](https://gguguk.github.io/posts/LLN/)\n",
+    "    - [큰 수의 법칙](https://namu.wiki/w/%ED%81%B0%20%EC%88%98%EC%9D%98%20%EB%B2%95%EC%B9%99)\n",
     "    - [중심극한정리](https://drhongdatanote.tistory.com/57)\n",
-    "    - [카이제곱 분포](https://angeloyeo.github.io/2021/12/13/chi_square.html)\n"
+    "    - [카이제곱 분포](https://angeloyeo.github.io/2021/12/13/chi_square.html)\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
